# MoleUI

./: .gitignore  NOTICE  README.md  package-lock.json  package.json
.github/: FUNDING.yml
scripts/: build-dmg.sh  notarize.sh  publish-release.sh  test_safe_remove_timeout.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/mole-dist/: mole
src-tauri/src/: main.rs
